--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Merriweather', serif;
+    font-size: 18px;
+    color: white;
     margin: 0;
 
 }
@@ -15,11 +17,16 @@ header > h1 {
 }
 nav{
     margin: 10px 10%;
+    text-align: center;
 
 }
 nav > a {
     padding: 0 10%;
+    cursor:pointer;
+    text-decoration: none;
+    font-size: 20px;
 }
+
 #Wednesday {
     width: 750px;
     margin: 50px auto;
@@ -100,7 +107,7 @@ nav > a {
     height: 120px;
     margin-left: 35px;
     margin-top: 20px;
-    background-color: seagreen;
+    background-color: rgb(125, 158, 180);
     font-size: 12px;
 
 }
@@ -131,4 +138,5 @@ li {
 }
 li > p {
     margin: 0 5px;
+    font-size: 14px;
 }
