--- a/style.css
+++ b/style.css
@@ -1,3 +1,79 @@
+@media only screen and (max-width: 500px) {
+    .nav {
+        padding: 0%;
+        width: 100%;
+        height: auto;
+    }
+    .items-nav {
+        margin-top: 5px;
+        margin-bottom: 5px;
+        margin-left: 0px;
+        margin-right: 0px;
+        width: 80px;
+    }
+    .items-menu {
+        justify-content: space-between;
+        align-items: center;
+    }
+    .item {
+        width: 90%;
+        margin-bottom: 30px;
+    }
+    .header {
+        padding: 0px;
+        margin-bottom: 10px;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+@media screen and  (max-width:505px) {
+    .item {
+        width: 70%;
+    }
+    nav {
+        height: 100px;
+    }
+ }
+@media  screen and (min-width: 700px) {
+    .item {
+        height: 70%;
+    }    
+    nav {
+        height: 75%;
+        justify-content: flex-start;
+    }
+}
+@media screen and (min-width:980px) {
+    .item {
+        width: 30%;
+    }
+}
+@media screen and (min-width: 1040px){
+    .class-marca {
+        margin-bottom: 10px;
+    }
+    .class-header {
+        display: inline;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .item {
+        width: 22%;
+    }
+    .class-header {
+        padding-bottom: 0px;
+        padding-left: 60px;
+        padding-right: 60px;
+        padding-top: 0px;
+     }
+}
+    .main {
+        padding-top: 20px;
+        padding-bottom: 20px;
+}
+}
 body {
     font-family: 'Merriweather', serif;
     font-size: 18px;
@@ -19,9 +95,6 @@ header > h1 {
 nav{
     margin: 10px 10%;
     text-align: center;
-    
-    
-    
 }
 nav > #a1 {
     background-color: rgb(38, 126, 38);
